@@ -103,6 +103,7 @@ Please note that our support for the checkout block is still experimental and th
 
 = 2.7.0 - 2021-xx-xx =
 * Add - Add a link to the snackbar notice that appears after submitting or saving evidence for a dispute challenge.
+* Add - Support saving new cards and paying with previously saved cards in the WooCommerce Checkout Block.
 * Fix - WooCommerce Payments admin pages redirect to the onboarding page when the WooCommerce Payments account is disconnected.
 * Update - Set a description when creating payment intents.
 
